--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "FIHR - Foodle",
+  "name": "Fun with words",
   "short_name": "FunWords",
   "start_url": "/",
   "display": "standalone",
