--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fun with words",
+  "name": "FIHR Foodle",
   "short_name": "FunWords",
   "start_url": "/",
   "display": "standalone",
