--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
   "name": "FIHR Foodle",
-  "short_name": "FunWords",
-  "start_url": "/",
+  "short_name": "Foodle",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#6aaa64",
+  "theme_color": "#0ea5e9",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "assets/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo.png",
+      "src": "assets/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
