--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,18 @@
 {
   "name": "FIHR Foodle",
-  "short_name": "Foodle",
-  "start_url": ".",
+  "short_name": "FunWords",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0b1b2b",
-  "theme_color": "#0f4c81",
+  "background_color": "#ffffff",
+  "theme_color": "#6aaa64",
   "icons": [
     {
-      "src": "assets/icons/icon-128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icons/icon-192.png",
+      "src": "logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icons/icon-512.png",
+      "src": "logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
